--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 *{
     font-family: "Open Sans", serif;
+    color: white;
 }
 
 body
@@ -20,7 +21,7 @@ body
 {
     text-decoration: none;
     color: white;
-    font-family: Roboto,sans-serif;
+    text-transform: uppercase;
     /*font-weight: bold;*/
     height: 80px;
     top:0;
@@ -108,6 +109,7 @@ div.upper_menu a:hover
     top:61px;
     position: relative;
     font-size: 24px;
+    text-transform: uppercase;
     font-family: PermanentMarker, serif;
 }
 
@@ -116,6 +118,7 @@ div.upper_menu a:hover
     top: 61px;
     font-size: 110px;
     position: relative;
+    text-transform: uppercase;
     font-family: PermanentMarker, serif;
 }
 
@@ -159,8 +162,14 @@ div.upper_menu a:hover
 .day_indicator
 {
     width: 30%;
-    height: 30px;
     display: inline-block;
+    height: 59px;
+    text-transform: uppercase;
+}
+
+.outlined_text
+{
+
 }
 
 
@@ -172,10 +181,24 @@ div.upper_menu a:hover
 
 .main_program_line
 {
-    top:50px;
-    background-color: rgba(200,20,0,0.7);
+    top:59px;
     height:30px;
     position: relative;
+}
+
+.line-color-red {
+    background-color: #ff1d15;
+    opacity: 0.5;
+}
+
+.line-color-yellow {
+    background-color: #eaa000;
+    opacity: 0.5;
+}
+
+.line-color-blue {
+    background-color: #00d4e7;
+    opacity: 0.5;
 }
 
 .main_program_schedul
