--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body
     color: white;
     text-transform: uppercase;
     /*font-weight: bold;*/
-    height: 80px;
+    height: 60px;
     top:0;
     width:20%;
     text-align: center;
@@ -38,7 +38,7 @@ body
     z-index: 10;
     background-color: #d8851e;
     width: 100%;
-    height:  83px;
+    height:  63px;
 }
 
 div.upper_menu a
@@ -59,7 +59,7 @@ div.upper_menu a:hover
 .text
 {
     position: relative;
-    top:30px;
+    top:20px;
 }
 
 /*fenti menü megvalósítása vége*/
@@ -86,7 +86,7 @@ div.upper_menu a:hover
 .main_field
 {
     margin: 0;
-    top: 83px;
+    top: 63px;
     background-color: rgba(0,0,0,0.7);
     position: relative;
     padding-bottom: 50px;
@@ -143,6 +143,13 @@ div.upper_menu a:hover
 {
     text-align: center;
     position: relative;
+    height: 100px;
+
+}
+
+.tworow {
+    margin-left: 40px;
+    margin-top: 20px;
 }
 
 .main_info
@@ -157,14 +164,35 @@ div.upper_menu a:hover
     text-align: left;
     position: relative;
     display: inline-block;
-    width: 350px;
+    width: 450px;
     height: 280px;
     margin-left: 60px;
     padding: 0;
 }
 
 .main_contact img {
+    vertical-align: middle;
+    margin-top: 30px;
+    width: 38px;
+    height: 25px;
+    position: relative;
+    left:15%;
+    top:-30px;
     display: inline-block;
+
+}
+
+.main_contact span {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 80px;
+    margin-top: -30px;
+    font-size: 18px;
+}
+
+.main_contact .avatar img{
+    width: auto;
+    height: 70px;
 }
 
 .title {
@@ -197,7 +225,7 @@ div.upper_menu a:hover
     vertical-align: top;
     width: 258px;
     display: inline-block;
-    height: 260px;
+    height: 290px;
     padding-left: 65px;
     text-align: left;
 }
@@ -210,6 +238,38 @@ div.upper_menu a:hover
 {
     position: relative;
     top:19px;
+    width: 100%;
+}
+
+.circle-content{
+    width: 220px;
+    display: inline-block;
+    margin-left: 50px;
+    margin-top: 25px;
+    vertical-align: top;
+}
+
+.circle-content .circle-image {
+    width: 220px;
+    height: 220px;
+    border-radius: 100%;
+    background: no-repeat 50% 50%;
+    margin-bottom: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.circle-content span {
+   font-size: 14px;
+}
+
+.circle-content .title {
+    margin-bottom: 20px;
+    font-size: 20px;
 }
 
 .main_program_line
@@ -233,17 +293,22 @@ div.upper_menu a:hover
 
 .main_program_schedul
 {
-    height:260px;
+    height:290px;
     position: relative;
     width:100%;
 }
 
-div.avatar img
-{
-    position: relative;
-    left:15%;
-    top:-30px;
-    height: 70px;
-    width:70px;
-    display: inline-block;
+.footer_content img{
+    height: 43px;
+    width: auto;
+    margin-top: 10px;
+    position: absolute;
+}
+
+.footer_content img:first-child {
+    left: calc((100% - 1110px) / 2);
+}
+
+.footer_content img:last-child {
+    right: calc((100% - 1110px) / 2);
 }
