--- a/css/style.css
+++ b/css/style.css
@@ -246,8 +246,9 @@ div.upper_menu a:hover
     width: 210px;
     display: inline-block;
     margin-left: 50px;
-    margin-top: 25px;
+    margin-top: 75px;
     vertical-align: top;
+    text-align: start;
 }
 
 .circle-content .circle-image {
@@ -257,7 +258,6 @@ div.upper_menu a:hover
     background: no-repeat 50% 50%;
     margin-bottom: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: justify;
 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -270,7 +270,7 @@ div.upper_menu a:hover
 }
 
 .circle-content .title {
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     font-size: 24px;
 }
 
